--- a/device/src/main/resources/application.properties
+++ b/device/src/main/resources/application.properties
@@ -8,7 +8,10 @@ address=12.996AB6000000
 value_filename=sensed.A
 
 #connected_true_value: which value to mean true/triggered/connected/..
-true_value=1
+true_value=0
 
 #heartbeat_interval_millis Device MQ heartbeat interval between broadcasting its existence
-heartbeat_interval_millis=5000
+heartbeat_interval_millis=10000
+
+#file_inspect_interval interval between inspecting the value_filename for changes in milliseconds
+file_inspect_interval=1000
