--- a/device/src/main/resources/application.properties
+++ b/device/src/main/resources/application.properties
@@ -1,17 +1,22 @@
+#   RabbitMQ configuration
+#=============================
+#mq.hostname hostname or ip of RabbitMQ server
+mq.hostname=192.168.1.25
+#mq.username RabbitMQ username
+mq.username=john
+#mq.password for RabbitMQ username
+mq.password=Johnli81
+#mq.heartbeat_interval_millis MQ heartbeat interval between broadcasting its existence
+mq.heartbeat_interval_millis=10000
+#   1Wire configuration
+#============================
 #Values for device.type are: break_beam, magnet, motion, temperature
-type=magnet
-
-#1-wire device address, for instance: 12.CA6DB6000000
-address=12.996AB6000000
-
-#value_filename: which file to read to changed state
-value_filename=sensed.A
-
-#connected_true_value: which value to mean true/triggered/connected/..
-true_value=0
-
-#heartbeat_interval_millis Device MQ heartbeat interval between broadcasting its existence
-heartbeat_interval_millis=10000
-
-#file_inspect_interval interval between inspecting the value_filename for changes in milliseconds
-file_inspect_interval=1000
+1wire.type=magnet
+#1wire.address 1-wire device address, for instance: 12.CA6DB6000000
+1wire.address=12.996AB6000000
+#1wire.value_filename: which file to read to changed state
+1wire.value_filename=sensed.A
+#1wire.connected_true_value: which value to mean true/triggered/connected/..
+1wire.true_value=0
+#1wire.file_inspect_interval interval between inspecting the value_filename for changes in milliseconds
+1wire.file_inspect_interval=1000
