--- a/device/src/main/resources/application.properties
+++ b/device/src/main/resources/application.properties
@@ -20,3 +20,8 @@ mq.heartbeat_interval_millis=10000
 1wire.true_value=0
 #1wire.file_inspect_interval interval between inspecting the value_filename for changes in milliseconds
 1wire.file_inspect_interval=1000
+#   Camera configuration
+#============================
+#camera.id unique id string
+camera.id=8a208a31-246a-4ec0-ac8d-3b188457587c
+camera.led=false
