--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>trigger</groupId>
     <artifactId>trigger</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -21,5 +22,9 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>web</module>
+        <module>device</module>
+    </modules>
 
 </project>
